<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InstaCab</string>
    <string name="action_settings">Settings</string>
    <string name="EnterPassword">Enter Password</string>
    <string name="EnterEmailId">Enter email id</string>
    <string name="SignIn">Sign In</string>
    <string name="SignUp">Sign Up</string>
    <string name="InstaCab">InstaCab</string>

</resources>
