<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/Base.V11.Theme.AppCompat.Light"
    tools:context=".Login_Activity">

    <TextView

        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:elegantTextHeight="true"
        android:text="@string/InstaCab"
        android:textAppearance="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title" />



    <EditText
        android:id="@+id/txtusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButtonGoogle"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:hint="@string/EnterEmailId"
        android:inputType="text"
        android:autoText="false"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:clickable="true"
        android:editable="false"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtusername"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:hint="@string/EnterPassword"
        android:inputType="textPassword"
        android:password="true" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPassword"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/SignIn" />

        <Button
            android:id="@+id/btnsignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPassword"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/SignUp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButtonFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButtonGoogle"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/imageButtonGoogle"
        android:layout_centerInParent="true"

        android:layout_marginTop="30dp"
        android:background="@drawable/facebooklogin" />

    <ImageButton
        android:id="@+id/imageButtonGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButtonFacebook"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/googlelogin"
        android:layout_marginBottom="20dp" />

</LinearLayout>
